<resources>
    <string name="app_name">Chat</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password_ref"><u>Forgot Password?</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_ref"><u>Register</u></string>
    <string name="logo">\@firstchat</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_in">Sign IN</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="user_profile">User Profile</string>
    <string name="user_list">Contacts</string>
    <string name="chat_list">Chats</string>
    <string name="title">Title</string>
    <string name="input_text">Write a message here</string>

</resources>
