<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingTop="@dimen/padding"
    android:paddingBottom="@dimen/padding"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="@dimen/text_size"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/ref_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_ref"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_gravity="center"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        />
    <TextView
        android:id="@+id/ref_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_ref"
        android:textColor="@android:color/white"
        android:textSize="@dimen/tex_size_small"
        android:layout_gravity="center"
        />

</LinearLayout>